# GLTutorial

./: .clang_complete  .gitignore  CMakeLists.txt  README.md  gltutorial.sublime-project
checkpoints/: 1_lines.cpp  2_triangles.cpp  3_transformations.cpp  4_blending.cpp  5_mesh.cpp  6_mvp.cpp  7_lighting.cpp
src/: CMakeLists.txt  Color.hpp  GraphicsManager.cpp  GraphicsManager.hpp  Mesh.cpp  Mesh.hpp  main.cpp
